unpackaged/main/default/objects/ET_Sales_Agreement__c/ET_Sales_Agreement__c.object-meta.xml
<CustomObject>
    <label>Sales Agreement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>