unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Administration_Charges__c.field-meta.xml
<CustomField>
    <fullName>Administration_Charges__c</fullName>
    <label>Administration Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>