unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>