unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>