unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>School Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>