unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>