unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>