unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Contract_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payment_Type__c</fullName>
    <label>Contract Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>