unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>