unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
                <label>Expired</label>
            </value>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>TERMINATED</fullName>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>ENTERED</fullName>
                <label>Entered</label>
            </value>
            <value>
                <fullName>AWAITING_START_DATE</fullName>
                <label>Awaiting Start Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>