unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Customer_Oracle_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Oracle_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Oracle Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>