unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer PO</label>
    <referenceTo>Customer_PO__c</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>