unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Customer_PO_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer PO No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>