unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>