unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/ETSALES_Customer_Quote__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Customer_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Quote</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>