unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/ETSales_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ETSales_Emirates__c</fullName>
    <formula>Salesforce_Customer__r.Location__r.ETSALES_Emirates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emirates</label>
    <type>Text</type>
</CustomField>