unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/ETSALES_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Opportunities_Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>