unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Fine_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Fine_Customer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fine Customer Email</label>
    <type>Email</type>
</CustomField>