unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/GL_Activity__c.field-meta.xml
<CustomField>
    <fullName>GL_Activity__c</fullName>
    <formula>ETSALES_Opportunity__r.GL_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>