unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/GL_Location__c.field-meta.xml
<CustomField>
    <fullName>GL_Location__c</fullName>
    <formula>ETSALES_Opportunity__r.GL_Location_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Location</label>
    <type>Text</type>
</CustomField>