unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/GL_Project__c.field-meta.xml
<CustomField>
    <fullName>GL_Project__c</fullName>
    <formula>ETSALES_Opportunity__r.GL_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>