unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/GL_Region__c.field-meta.xml
<CustomField>
    <fullName>GL_Region__c</fullName>
    <formula>ETSALES_Opportunity__r.GL_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>