unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/GL_Zone__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone__c</fullName>
    <formula>ETSALES_Opportunity__r.GL_Zone_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>