unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Invoicing_Collection_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Collection_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoicing Collection Email</label>
    <type>Email</type>
</CustomField>