unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Is_Single_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Single_Invoice__c</fullName>
    <label>Is Single Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>