unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Letter_Of_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Of_Award_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter Of Award Date</label>
    <type>Date</type>
</CustomField>