unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Max_Driver_OT__c.field-meta.xml
<CustomField>
    <fullName>Max_Driver_OT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Max Driver OT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>