unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/No_of_Months__c.field-meta.xml
<CustomField>
    <fullName>No_of_Months__c</fullName>
    <label>No of Months</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>