unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/PO_From_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_From_Customer_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO From Customer Date</label>
    <type>Date</type>
</CustomField>