unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Premature_Charges__c.field-meta.xml
<CustomField>
    <fullName>Premature_Charges__c</fullName>
    <label>Premature Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>