unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Prepared_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepared_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prepared Date</label>
    <type>DateTime</type>
</CustomField>