unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Sales_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Type__c</fullName>
    <label>Sales Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>