unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Sales_Approval_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approval_Submission_Date__c</fullName>
    <description>to track the approval submission date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Approval Submission Date</label>
    <type>DateTime</type>
</CustomField>