unpackaged/main/default/objects/ET_Sales_Agreement__c/fields/Salesforce_Customer__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>