unpackaged/main/default/objects/ET_Sales_Agreement__c/recordTypes/ETDI_Driving_Sales_Agreement.recordType-meta.xml
<RecordType>
    <fullName>ETDI_Driving_Sales_Agreement</fullName>
    <active>true</active>
    <label>ETDI_Driving Sales Agreement</label>
</RecordType>