unpackaged/main/default/objects/ET_Sales_Agreement__c/recordTypes/Maintenance_Sales_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Sales_Agreement</fullName>
    <active>true</active>
    <label>Maintenance Sales Agreement</label>
</RecordType>