unpackaged/main/default/objects/ET_Sales_Agreement__c/recordTypes/Rental_Sales_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Rental_Sales_Agreement</fullName>
    <active>true</active>
    <label>Rental Sales Agreement</label>
</RecordType>