unpackaged/main/default/objects/ET_Sales_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity__c</columns>
    <columns>Contract_No__c</columns>
    <columns>Version__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_PO_No__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Administration_Charges__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>GL_Zone__c</columns>
    <columns>GL_Region__c</columns>
    <columns>Salesforce_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>